ADD - scheletro html

--- a/index.html
+++ b/index.html
@@ -6,15 +6,71 @@
     <title>The Booleaner</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
-
-<header>
-
-
-</header>
-
-
-
 <body>
+  <header>
+  <!-- intestazione -->
+  </header>
+
+
+  <main>
+    <div>
+        <!-- titolo articolo e foto-->
+        <h1 class="titolo articolo">"Internet deve essere al servizio del bene pubblico": il manifesto di Tim Barners-Lee</h1>
+        
+
+        <figure>
+           <img src="./img/tim-1.jpg"/>
+           <img src="./img/tim-2.jpg"/>
+        </div>
+
+    <section>
+        <!-- paragrafo -->
+        <p>Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    </section>
+
+    <div>
+        <!-- lista -->
+            <ul>
+                <li>Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua.</li>
+                <li>Ut enim ad minim veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam</li>
+                <li>nisi ut aliquid ex ea commodi consequatur</li>
+            </ul>
+
+        </div>
+
+    <section>
+        <!-- tabella -->
+        <table>
+            <!-- intestazione -->
+            <thead>
+               <tr>
+                 <th>Lorem ipsum</th>
+                 <th>Lorem ipsum</th>
+                 <th>Lorem ipsum</th>
+               </tr>
+            </thead>
+
+            <!-- corpo tabella -->
+            <tbody>
+               <tr>
+                 <td>Lorem ipsum</td>
+                 <td>Lorem ipsum</td>
+                 <td>Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua.</td>
+               </tr>
+            </tbody>
+        </table>
+    </section>
+
+    <section>
+        <!-- paragrafo finale -->
     
+    </section>
+  </main>
+
+  <footer>
+    <!-- consigli e foto background -->
+  </footer>
+
+   
 </body>
 </html>
