ADD - header banner

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
   <header>
-  <!-- intestazione -->
+    <!-- intestazione -->
+    <img class="logo" src="./img/logo.svg"/>
   </header>
 
 
@@ -16,12 +17,9 @@
     <div>
         <!-- titolo articolo e foto-->
         <h1 class="titolo articolo">"Internet deve essere al servizio del bene pubblico": il manifesto di Tim Barners-Lee</h1>
-        
-
-        <figure>
            <img src="./img/tim-1.jpg"/>
            <img src="./img/tim-2.jpg"/>
-        </div>
+    </div>
 
     <section>
         <!-- paragrafo -->
@@ -30,13 +28,12 @@
 
     <div>
         <!-- lista -->
-            <ul>
-                <li>Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua.</li>
-                <li>Ut enim ad minim veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam</li>
-                <li>nisi ut aliquid ex ea commodi consequatur</li>
-            </ul>
-
-        </div>
+      <ul>
+         <li>Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua.</li>
+         <li>Ut enim ad minim veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam</li>
+         <li>nisi ut aliquid ex ea commodi consequatur</li>
+      </ul>
+    </div>
 
     <section>
         <!-- tabella -->
