ADD - table and images

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     </section>
 
-    <div class="margin-liste">
+    <div class="margine-liste">
         <!-- lista -->
       <ul>
          <li>Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua.</li>
@@ -55,22 +55,34 @@
 
     <section>
         <!-- tabella -->
-        <table class="spacing-table">
+        <table id="tabella">
             <!-- intestazione -->
             <thead>
-                <tr class="prima-riga">
+                <tr class="titoli-tabella">
                     <th>Lorem ipsum dolor</th>
                     <th>Lorem ipsum dolor</th>
-                    <th class="prima-riga-special">Lorem ipsum dolor</th>
+                    <th>Lorem ipsum dolor</th>
                 </tr>
             </thead>
 
             <!-- corpo tabella -->
             <tbody>
+               <tr class="colore-colonna">
+                 <td class="prima-colonna">Lorem ipsum</td>
+                 <td class="seconda-colonna">Lorem ipsum</td>
+                 <td class="terza colonna">Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua.Ut enim ad minim veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur. </td>
+               </tr>
+
                <tr>
-                 <td>Lorem ipsum</td>
-                 <td>Lorem ipsum</td>
-                 <td>Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua.</td>
+                 <td>Lorem ipsum dolor</td>
+                 <td>Lorem ipsum dolor</td>
+                 <td>Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua.Ut enim ad minim veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur.</td>
+               </tr>
+
+               <tr class="colore-colonna">
+                 <td>Lorem ipsum dolor</td>
+                 <td>Lorem ipsum dolor</td>
+                 <td>Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua.Ut enim ad minim veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur.</td>
                </tr>
             </tbody>
         </table>
@@ -78,12 +90,21 @@
 
     <section>
         <!-- paragrafo finale -->
+        <p class="margine-paragrafo">Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     
     </section>
   </main>
 
   <footer>
-    <!-- consigli e foto background -->
+    <!-- consigli e foto background-->
+    <p class="consigli">Potrebbero interessarti</p>
+    <div>
+        <p class="testo1-background">Lorem ipsum</p>
+    </div>
+    
+    <div>
+        <p class="testo2-background">Lorem ipsum</p>
+    </div>
   </footer>
 
    
